--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 			<span class="card-title">Add Meal / Food Item</span>
 			<form class="col">
 				<div class='row'>
-					<div class="input field col s6">
+					<div class="input-field col s6">
 						<input type="text" placeholder="Add Item" id="item-name">
 						<label for="item-name">Meal</label>
 					</div>
-					<div class="input field col s6">
+					<div class="input-field col s6">
 						<input type="text" placeholder="Add Calories" id="item-calories">
 						<label for="item-calories">Calories</label>
 					</div>
